--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -24,3 +24,12 @@ body {
   color: var(--foreground);
   font-family: Arial, Helvetica, sans-serif;
 }
+
+.hexagon {
+  clip-path: polygon(25% 5.77%,
+      75% 5.77%,
+      100% 50%,
+      75% 94.23%,
+      25% 94.23%,
+      0% 50%);
+}
